mutants.out.old/log/crates__umbra-core__src__angle.rs_line_32_col_9.log

*** crates/umbra-core/src/angle.rs:32:9: replace Radians::normalized_signed -> Self with Default::default()

*** mutation diff:
--- crates/umbra-core/src/angle.rs
+++ replace Radians::normalized_signed -> Self with Default::default()
@@ -24,18 +24,17 @@
 
     /// Śļ¶„ĀłŚ§ČśŹõ„Äā
     pub fn to_degrees(self) -> Degrees {
         Degrees(self.0 * 180.0 / PI)
     }
 
     /// `[-ŌÄ, ŌÄ)` „Āłś≠£Ť¶ŹŚĆĖÔľąŚĺ™ÁíįťáŹ„Äāconventions ¬ß2ÔľČ„Äā
     pub fn normalized_signed(self) -> Self {
-        let x = self.0.rem_euclid(TWO_PI); // [0, 2ŌÄ)
-        Radians(if x >= PI { x - TWO_PI } else { x }) // [-ŌÄ, ŌÄ)
+        Default::default() /* ~ changed by cargo-mutants ~ */ // [-ŌÄ, ŌÄ)
     }
 
     /// `[0, 2ŌÄ)` „Āłś≠£Ť¶ŹŚĆĖ„Äā
     pub fn normalized_two_pi(self) -> Self {
         Radians(self.0.rem_euclid(TWO_PI))
     }
 }
 


*** /usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=umbra-core@0.0.0
[1m[92m       Fresh[0m unicode-ident v1.0.24
[1m[92m       Fresh[0m proc-macro2 v1.0.106
[1m[92m       Fresh[0m quote v1.0.45
[1m[92m       Fresh[0m syn v2.0.117
[1m[92m       Fresh[0m thiserror-impl v2.0.18
[1m[92m       Fresh[0m thiserror v2.0.18
[1m[92m       Dirty[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core): the file `crates/umbra-core/src/angle.rs` has changed (1781452273.856101616s, 260014273ns after last build at 1781452273.596087343s)
[1m[92m   Compiling[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core)
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib`
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta`
[1m[91merror[E0277][0m[1m: the trait bound `Radians: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/angle.rs:32:9
   [1m[94m|[0m
[1m[94m32[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */ // [-ŌÄ, ŌÄ)
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `Radians`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `Radians` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m13[0m [92m+ #[derive(Default)][0m
[1m[94m14[0m [1m[94m|[0m pub struct Radians(pub f64);
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[91merror[0m: could not compile `umbra-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta` (exit status: 1)
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1m[91merror[E0277][0m[1m: the trait bound `angle::Radians: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/angle.rs:32:9
   [1m[94m|[0m
[1m[94m32[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */ // [-ŌÄ, ŌÄ)
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `angle::Radians`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `angle::Radians` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m13[0m [92m+ #[derive(Default)][0m
[1m[94m14[0m [1m[94m|[0m pub struct Radians(pub f64);
   [1m[94m|[0m

[1m[91merror[0m: could not compile `umbra-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib` (exit status: 1)

*** result: Failure(101)
